# ludopedia_crawler

./: development.ini  main.py  pyproject.toml  storage.py
app/: __init__.py
app/domain/: __init__.py
app/infra/: __init__.py  storage.py
app/protocol/: __init__.py
app/protocol/api/: __init__.py  views.py
app/protocol/crawler/: main.py
tests/protocol/: test_endpoints.py
