[tool.poetry]
name = "ludopedia-crawler"
version = "0.1.0"
description = ""
authors = ["gustavo brito <britopereiragustavo@gmail.com>"]
license = "MIT"
packages = [
  { include = "app" },
  { include = "*", from = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.3"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
pyramid = "^2.0.1"
waitress = "^2.1.2"


[tool.poetry.plugins."paste.app_factory"]
main = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crawl = "app.protocol.crawler.main:crawl"